; ModuleID = '/home/carl/AnghaBench/torch7/extr_Timer.c_torch_Timer_systime.c'
source_filename = "/home/carl/AnghaBench/torch7/extr_Timer.c_torch_Timer_systime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rusage = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { double, i64 }

@RUSAGE_SELF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @torch_Timer_systime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @torch_Timer_systime() #0 {
  %1 = alloca %struct.rusage, align 8
  %2 = load i32, i32* @RUSAGE_SELF, align 4
  %3 = call i32 @getrusage(i32 %2, %struct.rusage* %1)
  %4 = getelementptr inbounds %struct.rusage, %struct.rusage* %1, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = sitofp i64 %6 to double
  %8 = getelementptr inbounds %struct.rusage, %struct.rusage* %1, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load double, double* %9, align 8
  %11 = fdiv double %10, 1.000000e+06
  %12 = fadd double %7, %11
  %13 = fptosi double %12 to i64
  ret i64 %13
}

declare dso_local i32 @getrusage(i32, %struct.rusage*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
